ORCJAVA-422
===========

  - Manage User Credentials in Controller. This change
    incorporates the equivalent of ORCJAVA-295 fix for
    correctly releasing restlet client resources. 
    (Juha Lindfors)

ORCJAVA-295
===========

  - Restlet ClientResource was released too soon (before resource
    content was consumed), causing a NPE. Fixed by moving release 
    call in finally block after processing. (Eric Bariaux)

    
ORCJAVA-424
===========

 - Integrate original NIO-based remote proxy controller side
   components 


Controller 2.1.0 (2014-XX-XX Twin Galaxies)
===========================================

New Features:

  - EnOcean Implementation (Rainer Hitz, ORCJAVA-348)
  - Mi Casa Verde Vera Integration (Marcus Redeker, Eric Bariaux, Juha Lindfors,
    ORCJAVA-330, ORCJAVA-331, ORCJAVA-295, ORCJAVA-422)
  - Round robind database (RRD) integration for storing sensor
    data (Marcus Redeker, ORCJAVA-343, ORCJAVA-356)
  - EmonCMS integration for storing sensor data (Marcus Redeker, ORCJAVA-357)
  - WebConsole upgraded to version 2.1.1, fixes issues with stuck
    loading screen (Richard Turner, ORCJAVA-345)
  - Added DSC-IT 100 Security System integration - IP to serial (Greg Rapp)
  - Lagarto server (panStamps) integration (Daniel Berenguer)
  - Support 'custom' sensor types with virtual commands (ORCJAVA-217)
  - KNX: added distinct levels for 'DIM' and 'SCALE' commands that allow
    set values to be configured for buttons, e.g. 'DIM 50' to dim directly
    to 50% (Eric Bariaux, ORCJAVA-71). Add DPT 6.001 and DPT 6.010 
    (Stefan Langerman, ORCJAVA-361). Add support for data datatype (DPT 10.xxx),
    time datatype (DPT 11.xxx), four-octet signed values (DPT 13.xxx) and
    four octet float values (DPT 14.xxx). Corresponding commands that have been
    added are 'DATE', 'TIME', 'ENERGY' and 'POWER' (Kenneth Stridh, ORCJAVA-362)
  - HTTP protocol: methods GET, POST, PUT and DELETE are now supported.